# video-organiser

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/app/: main.py
src/app/services/: __init__.py  metadata.py  metadata_cache.py  organizer.py  paths.py  rules.py  scanner.py  settings.py  threading.py
src/app/ui/: __init__.py  main_window.py
src/tools/: cli.py
src/tools/processing/: __init__.py  cache.py  metrics.py  pipeline.py  preflight.py  runner.py  summarizer.py  transcription.py  utils.py  vision.py
tests/: test_metadata_cache.py  test_organizer.py  test_processing_regression.py  test_scanner.py
tests/fixtures/: sample_videos.json
