[metadata]
name = video-organiser
version = 0.1.0
description = GUI and CLI scaffolding for the Video Organiser project.
author = Video Organiser Team

[options]
python_requires = >=3.11
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    video-organiser-cli = tools.cli:main
    video-organiser-gui = app.main:main
